--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -2,7 +2,7 @@
   <div class="header"  (click)="main()">
     <mat-icon class="product-icon">devices</mat-icon>
     <div class="product">
-      <div class="product-name">TROUBLESHOOTING TOOL</div>
+      <div class="product-name">PANTOMATH</div>
     </div>
   </div>
   <div class="dropdown">
