--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -239,7 +239,7 @@ span {
   background-color: #0f4c7b;
 }
 .product-name {
-  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+  font-family:  sans-serif;
   font-size: small;
   margin: 0;
   margin-top: 0;
